// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Input Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 bJHnsS"
    >
      <input
        autocomplete="off"
        class="StyledTextInput-sc-1x30a0s-0 pRFSw sc-jgzFKd dRjKgd sc-gSIJqs cVUlwX"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Input Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 bJHnsS"
    >
      <input
        autocomplete="off"
        class="StyledTextInput-sc-1x30a0s-0 pRFSw sc-jgzFKd hgqJru sc-gSIJqs cVUlwX"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Input Monospace 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 bJHnsS"
    >
      <input
        autocomplete="off"
        class="StyledTextInput-sc-1x30a0s-0 pRFSw sc-jgzFKd fnXYvo sc-gSIJqs cVUlwX"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Input With Placeholder 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 bJHnsS"
    >
      <input
        autocomplete="off"
        class="StyledTextInput-sc-1x30a0s-0 pRFSw sc-jgzFKd dRjKgd sc-gSIJqs cVUlwX"
        placeholder="This is a placeholder"
        value=""
      />
    </div>
  </div>
</div>
`;
